# MLOps_Proyecto_Final

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: docker-build-push.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: config.py  mlops_pipeline.py
api/: Dockerfile  __init__.py  config.py  inference_log.py  main.py  model_holder.py  requirements.txt
grafana/dashboards/: inference-dashboard.json
k8s/airflow/: logs-pvc.yaml  values.yaml
k8s/api/: deployment.yaml  secret.yaml  service.yaml
locust/: Dockerfile  deployment.yaml  locustfile.py
mlflow/: Dockerfile
mlops_core/: __init__.py  decision.py  features.py  ingest.py  logging_schema.py  promotion.py  types.py  validation.py
prometheus/: prometheus.yml
streamlit/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  test_api_endpoints.py  test_fetch_batch_errors.py  test_inference_log.py  test_log_result.py  test_mlops_core_skeleton.py  test_promotion.py  test_property_audit_roundtrip.py  test_property_decision_independence.py  test_property_decision_rules.py  test_property_features_batch_traceability.py  test_property_features_split_determinism.py  test_property_features_unknown.py  test_property_inference_event.py  test_property_ingest_dedup.py  test_property_ingest_exhaustion.py  test_property_ingest_select_day.py  test_property_promotion_rule.py  test_property_raw_preservation.py  test_property_validation_drift.py  test_property_validation_new_categories.py  test_property_validation_quality.py  test_property_validation_schema.py
(+37 files in other folders)
